--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ a {
   color: #FFFFFF;
   font-weight: 500;
   font-size: 16px;
+  text-align: center;
 }
 
 a:hover {
@@ -30,7 +31,7 @@ h2 {
   font-size: 25px;
   font-weight: 500;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 5px;
+  letter-spacing: 4px;
 }
 
 ul {
@@ -44,7 +45,12 @@ li {
 
 li a {
   font-size: 50px;
-  letter-spacing: 13px;
+  letter-spacing: 40px;
+  color: rgba(230, 230, 230, 0.5);
+}
+
+a i {
+  text-align: center;
 }
 
 /*custom css*/
@@ -58,7 +64,7 @@ li a {
   background-color: #B17C7B;
   padding: 40px;
   margin: 20px 0px;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 0px 10px 30px rgba(0,0,0,0.2);
   text-align: center;
 }
@@ -69,7 +75,7 @@ li a {
 
 #btn-white {
   background-color: #FFFFFF;
-  color: #D2B4B4;
+  color: #B17C7B;
   padding: 15px 20px;
   border-radius: 4px;
 }
